stop modal being too big in widescreen

--- a/src/scss/modules/_modal.scss
+++ b/src/scss/modules/_modal.scss
@@ -20,6 +20,7 @@
     max-width: 550px;
     min-width: 330px;
     height: auto;
+    max-height: 100%;
      -webkit-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
     -ms-transform: translateX(-50%) translateY(-50%);
